syntax = "proto3";

service AsignaturaServicios {
    rpc ObtenerTodasAsignaturas (Vacio) returns (ListaAsignaturas) {}

    rpc ObtenerAsignaturaPorId (IdentificadorAsignatura) returns (AsignaturaRespuesta) {}

    rpc ObtenerAsignaturaPorCodigo (CodigoAsignatura) returns (ListaAsignaturas) {}
}

message Vacio {}

message Asignatura {
    int32 bd_id = 1;
    string codigo_asignatura = 2;
    string nombre_asignatura = 3;
    string seccion = 4;
    string evento = 5;
    string horario = 6;
    string profesor = 7;
    string sede = 8;
    string paquete = 9;
}

message ListaAsignaturas {
    repeated Asignatura asignaturas = 1;
}

message IdentificadorAsignatura {
    int32 id = 1;
}

message CodigoAsignatura { 
    string codigo = 1;
}

message AsignaturaRespuesta {
    Asignatura asignatura = 1;
}
